--- a/SlagalicaProjekat/app/src/main/res/layout/activity_game3.xml
+++ b/SlagalicaProjekat/app/src/main/res/layout/activity_game3.xml
@@ -1,72 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/plava"
     android:orientation="vertical"
     android:padding="16dp">
 
     <!-- Question Text View -->
+
+    <!-- Answer Buttons Container -->
+
     <TextView
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="What is the capital of France?"
-        android:textSize="24sp" />
+        android:layout_marginBottom="444dp"
+        android:text="Koji je glavni grad Francuske?"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_nextGame"
+        tools:layout_editor_absoluteX="26dp" />
 
-    <!-- Answer Buttons Container -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp">
+    <Button
+        android:id="@+id/answer1"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
 
-        <!-- Answer Button 1 -->
-        <Button
-            android:id="@+id/answer1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Paris"
-            android:textSize="20sp" />
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="436dp"
+        android:text="Beograd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <!-- Answer Button 2 -->
-        <Button
-            android:id="@+id/answer2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Berlin"
-            android:textSize="20sp" />
+    <Button
+        android:id="@+id/answer2"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
 
-        <!-- Answer Button 3 -->
-        <Button
-            android:id="@+id/answer3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="London"
-            android:textSize="20sp" />
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="436dp"
 
-        <!-- Answer Button 4 -->
-        <Button
-            android:id="@+id/answer4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Madrid"
-            android:textSize="20sp" />
-    </LinearLayout>
+        android:text="Paris"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/answer3"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        android:text="Barcelona"
+        app:layout_constraintBottom_toTopOf="@+id/answer1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintStart_toEndOf="@+id/answer4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/answer4"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="25dp"
+        android:text="Madrid"
+        app:layout_constraintBottom_toTopOf="@+id/answer2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/timer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Time left : 8 seconds"
-        android:textSize="24sp" />
+        android:text="Preostalo vreme : 7 "
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_nextGame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Next Game"
+        android:layout_marginBottom="128dp"
+        android:text="Sledeca igra"
         android:textSize="20sp"
-        android:layout_marginTop="200dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
