--- a/SlagalicaProjekat/app/src/main/res/layout/activity_log_user.xml
+++ b/SlagalicaProjekat/app/src/main/res/layout/activity_log_user.xml
@@ -4,24 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogUserActivity"
+    tools:context=".Activities.LogUserActivity"
     android:background="@drawable/plava">
 
     <Button
         android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
         android:text="Profil"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/play"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.202" />
 
     <Button
-        android:id="@+id/play"
+        android:id="@+id/btn_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="igraj"
@@ -37,13 +37,26 @@
         android:id="@+id/playFriend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="280dp"
         android:text="Igraj sa prijateljem"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/play"
+        app:layout_constraintTop_toBottomOf="@+id/btn_play"
         app:layout_constraintVertical_bias="0.198" />
+
+    <EditText
+        android:id="@+id/gameRequest"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginBottom="164dp"
+        android:hint="Player Username:"
+        android:inputType="text"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playWithFriendsButton"
+        tools:layout_editor_absoluteX="32dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
