--- a/SlagalicaProjekat/app/src/main/res/layout/activity_game4.xml
+++ b/SlagalicaProjekat/app/src/main/res/layout/activity_game4.xml
@@ -1,94 +1,111 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/plava"
-    android:padding="16dp"
-    tools:context=".MainActivity">
-    <TextView
-        android:id="@+id/tvGameTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="KORAK PO KORAN"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/btnTerm1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 1" />
-
-        <Button
-            android:id="@+id/btnTerm2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 2" />
-        <Button
-            android:id="@+id/btnTerm3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 3" />
-
-        <Button
-            android:id="@+id/btnTerm4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 4" />
-        <Button
-            android:id="@+id/btnTerm5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 5" />
-        <Button
-            android:id="@+id/btnTerm6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 6" />
-
-        <Button
-            android:id="@+id/btnTerm7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Polje 7" />
-
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/etSolution"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Konacno resenje"
-        android:inputType="text"
-        android:imeOptions="actionDone" />
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
+    tools:context=".Activities.Game4Activity">
 
     <TextView
-        android:id="@+id/tajmer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="preostalo vreme : "
-        android:textColor="@color/white"
-        android:textSize="24sp"/>
-    <TextView
-        android:id="@+id/tvScore"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Osvojeni bodovi: 0"
-        android:gravity="center"
-        android:layout_marginTop="16dp" />
-    <Button
-        android:id="@+id/btnConfirm"
+        android:id="@+id/timerTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sledeca igra"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp" />
+        android:text="Vreme: 5s"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"/>
 
+    <TextView
+        android:id="@+id/term1TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 1"
+        android:textSize="18sp"
+        android:layout_below="@id/timerTextView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/term2TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 2"
+        android:textSize="18sp"
+        android:layout_below="@id/term1TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/term3TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 3"
+        android:textSize="18sp"
+        android:layout_below="@id/term2TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/term4TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 4"
+        android:textSize="18sp"
+        android:layout_below="@id/term3TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/term5TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 5"
+        android:textSize="18sp"
+        android:layout_below="@id/term4TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/term6TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 6"
+        android:textSize="18sp"
+        android:layout_below="@id/term5TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/term7TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pojam 7"
+        android:textSize="18sp"
+        android:layout_below="@id/term6TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/guessEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Unesite pojam"
+        android:layout_below="@id/term7TextView"
+        android:layout_marginTop="16dp"
+        android:inputType="text"/>
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Potvrdi"
+        android:layout_below="@id/guessEditText"
+        android:layout_marginTop="16dp"
+        android:onClick="submitGuess"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
