--- a/SlagalicaProjekat/app/src/main/res/layout/activity_log_user.xml
+++ b/SlagalicaProjekat/app/src/main/res/layout/activity_log_user.xml
@@ -55,6 +55,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.384" />
 
+    <Button
+        android:id="@+id/btn_rang_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rang lista"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.53" />
+
     <!--    <Button-->
     <!--        android:id="@+id/playFriend"-->
     <!--        android:layout_width="wrap_content"-->
