--- a/SlagalicaProjekat/app/src/main/res/layout/activity_my_profile.xml
+++ b/SlagalicaProjekat/app/src/main/res/layout/activity_my_profile.xml
@@ -75,13 +75,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Zvezde: "
+        android:text="Starts: "
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.56"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/odigranePartijeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Broj odigranih part: "
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.62"
         tools:layout_editor_absoluteX="0dp" />
 
     <!--    <TextView-->
