--- a/SlagalicaProjekat/app/src/main/res/layout/activity_game4.xml
+++ b/SlagalicaProjekat/app/src/main/res/layout/activity_game4.xml
@@ -7,6 +7,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
+    android:background="@drawable/plava"
     tools:context=".Activities.Game4Activity">
 
     <TextView
